[TECH][glming] add images

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Monk
 SEOTitle: Monk的博客 | Monk Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/blog_banner.jpg
 email: guangliang1120@gmail.com
 description: "You're the coffee that I need in the morning. You're my sunshine in the rain when it's pouring. "
 keyword: "Monk, Monk Blog, mgljava"
