[TECH][glming] 增加文件大纲

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.idea/*.xml
 # Created by https://www.gitignore.io/api/macos
 
 ### macOS ###
@@ -33,4 +33,3 @@ Temporary Items
 
 # debug file
 _site
-.idea
