[TECH][glming] add jianshu

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ RSS: false
 zhihu_username:     N/A
 github_username:    mgljava
 facebook_username:  N/A
-jianshu_username:   N/A
+jianshu_username:   587d3b59620a
 #twitter_username:   N/A
 
 
